# yolo-detection-system

./: .gitignore  README.md  YOLO_INTEGRATION.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.serena/: project.yml
.serena/cache/typescript/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: project_overview.md  suggested_commands.md  tech_stack_details.md
docs/: ARCHITECTURE_MIGRATION.md  ERROR_SCENARIOS_TEST_REPORT.md  FINAL_TEST_COMPLETION_REPORT.md  FIX_REPORT.md  MANUAL_TEST_GUIDE.md  MODEL_ACCURACY_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PORT_CHANGE_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  RUST_IMPLEMENTATION.md  TENSOR_DIMENSION_FIX_REPORT.md  TEST_RESULTS.md
models/: class_names.txt  classes.txt
resource/: Box.yaml  yolo_UI.py  基于yolov8的实时检测系统.docx
scripts/: build.sh  convert_model.py  dev.sh  setup.sh  test_detection.py  test_error_scenarios.py  test_model_accuracy.py  test_model_init.py  test_tensor_fix.py
src/: App.tsx  YoloApp.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  yolo.rs  yolo_api.rs
src-tauri/src/yolo/: candle_detector.rs  detection_opencv.rs  detection_opencv.rs.bak  detection_simple.rs  lightweight.rs  mod.rs  model.rs  model_candle.rs  model_candle_optimized.rs  model_stub.rs  onnx_detector.rs  performance_benchmark.rs  postprocessing.rs  preprocessing.rs  real.rs  simple.rs  stub.rs
src/components/: DetectionHistory.tsx  DetectionStats.tsx  DetectionVisualization.tsx
src/components/ui/: animated-grid-pattern.tsx  button.tsx  checkbox.tsx  file-upload.tsx  image-preview.tsx  pulsating-button.tsx  ripple-button.tsx  ripple.tsx  slider.tsx  spinner.tsx  toast.tsx
src/lib/: use-toast.tsx
