[package]
name = "yolo-detection-system"
version = "0.1.0"
description = "YOLOv8 Real-time Detection System"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# YOLO 模型推理支持 (暂时注释以加速编译)
# ort = { version = "2.0", optional = true }
# candle-core = { version = "0.6", optional = true }
# candle-nn = { version = "0.6", optional = true }
# candle-onnx = { version = "0.6", optional = true }
# image = "0.25"
# base64 = "0.22"

[features]
default = []
# onnx-runtime = ["ort"]
# candle = ["candle-core", "candle-nn", "candle-onnx"]

[[bin]]
name = "yolo-detection-system"
path = "src/main.rs"
